tests/tests/snapshots/test__rust__rust-export-files-module.snap
---
source: tests/tests/rust.rs
expression: "fs::read_to_string(root.join(\"test/rust.rs\")).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.

/// A documented account.
#[allow(non_camel_case_types, non_snake_case)]
pub struct Account {
    /// Stable database identifier.
    pub id: u64,
    pub display_name: String,
    pub aliases: Vec<String>,
    pub flags: std::collections::HashSet<String>,
    pub metadata: std::collections::HashMap<String, bool>,
    pub coordinates: (f64, f64),
    pub singleton: (u8,),
    pub bytes: [u8; 4],
    pub optional: Option<String>,
    pub maybe_count: Option<i32>,
    pub kind: String,
}

#[allow(non_camel_case_types, non_snake_case)]
pub enum Event {
    Started,
    Progress(
        /// Completion percentage.
        u8,
        #[deprecated = "use structured progress"]
        String,
    ),
    Finished {
        success: bool,
        message: Option<String>,
    },
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct Keywords {
    pub r#type: String,
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct Marker;

#[allow(non_camel_case_types, non_snake_case)]
pub struct MutualA {
    pub b: Box<super::super::test::rust::MutualB>,
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct MutualB {
    pub a: Box<super::super::test::rust::MutualA>,
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct Page<T> {
    pub items: Vec<T>,
    pub next: Option<String>,
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct Recursive {
    pub direct: Box<Option<super::super::test::rust::Recursive>>,
    pub indirect: Vec<super::super::test::rust::Recursive>,
    pub fixed: Box<[super::super::test::rust::Recursive; 1]>,
}

#[allow(non_camel_case_types, non_snake_case)]
pub struct UserId(
    /// The wrapped identifier.
    pub u64,
);
