tests/tests/snapshots/test__rust__rust-export-files-root.snap
---
source: tests/tests/rust.rs
expression: "fs::read_to_string(root.join(\"mod.rs\")).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.

#[allow(non_camel_case_types, non_snake_case)]
pub mod test;
