tests/tests/snapshots/test__rust__rust-export-module-prefixed.snap
---
source: tests/tests/rust.rs
expression: prefixed
---
// This file has been generated by Specta. Do not edit this file manually.
#![allow(non_camel_case_types, non_snake_case)]

/// A documented account.
pub struct test_rust_Account {
    /// Stable database identifier.
    pub id: u64,
    pub display_name: String,
    pub aliases: Vec<String>,
    pub flags: std::collections::HashSet<String>,
    pub metadata: std::collections::HashMap<String, bool>,
    pub coordinates: (f64, f64),
    pub singleton: (u8,),
    pub bytes: [u8; 4],
    pub optional: Option<String>,
    pub maybe_count: Option<i32>,
    pub kind: String,
}

pub enum test_rust_Event {
    Started,
    Progress(
        /// Completion percentage.
        u8,
        #[deprecated = "use structured progress"]
        String,
    ),
    Finished {
        success: bool,
        message: Option<String>,
    },
}

pub struct test_rust_Keywords {
    pub r#type: String,
}

pub struct test_rust_Marker;

pub struct test_rust_MutualA {
    pub b: Box<test_rust_MutualB>,
}

pub struct test_rust_MutualB {
    pub a: Box<test_rust_MutualA>,
}

pub struct test_rust_Page<T> {
    pub items: Vec<T>,
    pub next: Option<String>,
}

pub struct test_rust_Recursive {
    pub direct: Box<Option<test_rust_Recursive>>,
    pub indirect: Vec<test_rust_Recursive>,
    pub fixed: Box<[test_rust_Recursive; 1]>,
}

pub struct test_rust_UserId(
    /// The wrapped identifier.
    pub u64,
);
