tests/tests/snapshots/test__rust__rust-export-raw.snap
---
source: tests/tests/rust.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.

/// A documented account.
#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct Account {
    /// Stable database identifier.
    pub id: u64,
    pub display_name: ::std::string::String,
    pub aliases: ::std::vec::Vec<::std::string::String>,
    pub flags: ::std::collections::HashSet<::std::string::String>,
    pub metadata: ::std::collections::HashMap<::std::string::String, bool>,
    pub coordinates: (f64, f64),
    pub singleton: (u8,),
    pub bytes: [u8; 4],
    pub optional: ::std::option::Option<::std::string::String>,
    pub maybe_count: ::std::option::Option<i32>,
    pub kind: ::std::string::String,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub enum Event {
    Started,
    Progress(
        /// Completion percentage.
        u8,
        #[deprecated = "use structured progress"]
        ::std::string::String,
    ),
    Finished {
        success: bool,
        message: ::std::option::Option<::std::string::String>,
    },
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct Keywords {
    pub r#type: ::std::string::String,
    pub r#abstract: bool,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct Marker;

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct MutualA {
    pub b: ::std::boxed::Box<MutualB>,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct MutualB {
    pub a: ::std::boxed::Box<MutualA>,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct Page<T> {
    pub items: ::std::vec::Vec<T>,
    pub next: ::std::option::Option<::std::string::String>,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct Recursive {
    pub direct: ::std::option::Option<::std::boxed::Box<Recursive>>,
    pub indirect: ::std::vec::Vec<Recursive>,
    pub fixed: ::std::boxed::Box<[Recursive; 1]>,
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[allow(dead_code)]
#[derive(Debug, Clone)]
pub struct UserId(
    /// The wrapped identifier.
    pub u64,
);

pub const GENERATED: bool = true;
