tests/tests/snapshots/test__rust__rust-export-serde-container-reprs.snap
---
source: tests/tests/rust.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[derive(serde::Serialize, serde::Deserialize)]
#[serde(tag = "t", content = "c")]
pub enum Adjacent {
    Alpha(
        ::std::string::String,
    ),
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[derive(serde::Serialize, serde::Deserialize)]
#[serde(rename_all = "camelCase", tag = "kind")]
pub enum Internal {
    AlphaOne {
        value: ::std::string::String,
    },
}

#[allow(deprecated, non_camel_case_types, non_snake_case)]
#[derive(serde::Serialize, serde::Deserialize)]
#[serde(untagged)]
pub enum Untagged {
    Text(
        ::std::string::String,
    ),
    Count(
        u32,
    ),
}
