tests/tests/snapshots/test__rust__rust-export-serde.snap
---
source: tests/tests/rust.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.

#[allow(deprecated, non_camel_case_types, non_snake_case)]
pub enum Status {
    waiting_for_input,
    complete,
}
